--- a/app/views/users/welcome.html.haml
+++ b/app/views/users/welcome.html.haml
@@ -19,3 +19,8 @@
     %strong
       = @user.email
     and the password you choose here.
+
+- else
+  %p
+    You have already set up your account. Please continue to 
+    your personal page.
