--- a/app/assets/stylesheets/droom_client.css.sass
+++ b/app/assets/stylesheets/droom_client.css.sass
@@ -40,6 +40,8 @@ form.user_chooser
     input.time
       width: 80px
   fieldset.chooser
+    input[type="text"], textarea, select
+      width: 812px
     p.names
       margin: 0
       input[type="text"]
@@ -115,10 +117,3 @@ form.user_chooser
         display: inline-block
         vertical-align: middle
         margin-right: 10px
-
-a.invite
-  +icon("droom_client/message.png")
-  color: $blue
-  width: 16px
-  height: 16px
-
