--- a/app/assets/stylesheets/droom_client.css.sass
+++ b/app/assets/stylesheets/droom_client.css.sass
@@ -91,7 +91,7 @@ form.user_chooser
     list-style: none
     &.waiting
       background:
-        image: image-url('droom-client/spinner.gif')
+        image: image-url('droom_client/spinner.gif')
         position: center center
         repeat: no-repeat
     li.suggestion
