--- a/app/views/users/welcome.html.haml
+++ b/app/views/users/welcome.html.haml
@@ -1,26 +1,14 @@
 -content_for :title do
   Welcome!
 
--content_for :standfirst do
+- if @user.password_set?
   %p
     %strong
       Hello
       = @user.formal_name.strip + "."
+    Thank you for confirming your email address.
 
-- if @user.unconfirmed?
-  %p
-    We notice that your Croucher Foundation account has not been used before.
-    Before we go any further, please choose a password to secure your account.
-
-  = render "users/confirmation_form", user: @user
-
-  %p
-    On your next visit you will be able to sign in directly with the email address
-    %strong
-      = @user.email
-    and the password you choose here.
+  = render "users/after_confirmation", user: @user
 
 - else
-  %p
-    You have already set up your account. Please continue to 
-    your personal page.
+  = render "users/password_required", user: @user
