revised arrival procedure with custom callback that will probably settle down a bit further before this is done

--- a/app/views/users/_confirmation_form.html.haml
+++ b/app/views/users/_confirmation_form.html.haml
@@ -16,7 +16,14 @@
         = f.label :password_confirmation, class: "required"
         = f.password_field :password_confirmation, placeholder: "", required: true
 
-      %span.col.button
-        %label
-          &nbsp;
-        = f.submit "Save password and continue"
+      %span.col.strength{:data => {:role => "complexity"}}>
+        %strong
+          = t :password_strength
+        %span.complexity
+          Checking
+      
+    %p.formnote
+      = t :password_strength_note
+
+    %p.buttons
+      = f.submit "Save password and continue"
