--- a/app/views/users/_confirmation_form.html.haml
+++ b/app/views/users/_confirmation_form.html.haml
@@ -17,4 +17,6 @@
         = f.password_field :password_confirmation, placeholder: "", required: true
 
     %p.buttons
+      &nbsp;
+      %br
       = f.submit "Save password and continue"
