--- a/app/views/users/_confirmation_form.html.haml
+++ b/app/views/users/_confirmation_form.html.haml
@@ -5,18 +5,21 @@
   = hidden_field_tag :tok, user.authentication_token
   - if destination
     = hidden_field_tag :destination, destination
-  
+
   %fieldset{data: {role: 'password'}}
     %p.set_password
       %span.col.password>
         = f.label :password, class: "required"
         = f.password_field :password, placeholder: "Six characters or more, please", required: true, data: {role: "password"}
-
       %span.col.confirmation{:data => {:role => "confirmation"}}>
         = f.label :password_confirmation, class: "required"
         = f.password_field :password_confirmation, placeholder: "", required: true
+      %span.col.button{:data => {:role => "confirmation"}}>
+        &nbsp;
+        %br
+        = f.submit "Continue"
 
-    %p.buttons
-      &nbsp;
-      %br
-      = f.submit "Save password and continue"
+    %p.password_quality{data: {role: "meter"}}
+      %span.meter{data: {role: "gauge"}}
+      %span.instructions{data: {role: "warnings"}}
+      %span.notes{data: {role: "notes"}}
