confirmation form tidied up, explains more

--- a/app/views/users/_confirmation_form.html.haml
+++ b/app/views/users/_confirmation_form.html.haml
@@ -14,12 +14,14 @@
       %span.col.confirmation{:data => {:role => "confirmation"}}>
         = f.label :password_confirmation, class: "required"
         = f.password_field :password_confirmation, placeholder: "", required: true
-      %span.col.button{:data => {:role => "confirmation"}}>
-        &nbsp;
-        %br
-        = f.submit "Continue"
 
-    %p.password_quality{data: {role: "meter"}}
+    %p.buttons{:data => {:role => "meter"}}>
+      = f.submit "Continue"
       %span.meter{data: {role: "gauge"}}
       %span.instructions{data: {role: "warnings"}}
+        The strength of your password will be measured as you type.
+
+    %p.password_quality
       %span.notes{data: {role: "notes"}}
+        When the password is strong enough, the 'confirmation' box will become available, and when the two passwords match the 'continue' button will go green and become clickable.
+        Dictionary words, repetition and common passwords are likely to be rejected. Please add complication, either in the form of punctuation and strange characters or just by adding more words.
