--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -2,31 +2,22 @@
   - @user.email = @user.unconfirmed_email
 
 = form_for @user, url: droom_client.user_url(@user), method: "put", html: {autocomplete: "off"} do |f|
-
-  %fieldset.contacts
-    %p
-      = f.label :email, :class => 'required'
-      = f.email_field :email, :required => true
-      %br
-      %span.formnote
-        = t("notes.user_email")
-
-  %fieldset.password
+  %fieldset{data: {role: 'password'}}
     %p.set_password
       %span.col.password>
-        = f.label :password
-        = f.password_field :password, :placeholder => t("placeholders.user.password"), :required => false, :data => {:role => "password"}
+        = f.label :password, class: "required"
+        = f.password_field :password, placeholder: "Six characters or more, please", required: true, data: {role: "password"}
+      %span.col.confirmation{:data => {:role => "confirmation"}}>
+        = f.label :password_confirmation, class: "required"
+        = f.password_field :password_confirmation, placeholder: "", required: true
 
-      %span.col{:data => {:role => "confirmation"}}>
-        = f.label :password_confirmation
-        = f.password_field :password_confirmation, :required => false
+    %p.buttons{:data => {:role => "meter"}}>
+      = f.submit "Continue"
+      %span.meter{data: {role: "gauge"}}
+      %span.instructions{data: {role: "warnings"}}
+        The strength of your password will be measured as you type.
 
-      %span.formnote
-        = t :leave_password
-  
-    %p.note.password_notice
-
-  %fieldset.buttons
-    = f.submit t(:save_changes)
-    = t :or
-    = link_to t(:cancel), '#', class: "cancel"
+    %p.password_quality
+      %span.notes{data: {role: "notes"}}
+        When the password is strong enough, the 'confirmation' box will become available, and when the two passwords match the 'continue' button will go green and become clickable.
+        Dictionary words, repetition and common passwords are likely to be rejected. Please add complication, either in the form of punctuation and strange characters or just by adding more words.
