self-editing improvements, simplified address book interface

--- a/app/views/users/edit/_account.html.haml
+++ b/app/views/users/edit/_account.html.haml
@@ -1,3 +1,6 @@
+- content_for :title do
+  = t :edit_account_settings
+
 - if @user.persisted? && @user.unconfirmed_email?
   - @user.email = @user.unconfirmed_email
 
