--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,7 +1,3 @@
-.holder
-  %h2.title
-    = t :edit_account_settings
-
-  = render :partial => 'form'
+= render :partial => "users/edit/#{@view}"
 
 
