--- a/app/assets/stylesheets/droom_client.css.sass
+++ b/app/assets/stylesheets/droom_client.css.sass
@@ -117,3 +117,28 @@ form.user_chooser
         display: inline-block
         vertical-align: middle
         margin-right: 10px
+
+.password_quality
+  opacity: 0
+  &.s0, &.s1, &.s2, &.s3, &.s4
+    opacity: 1
+  &.s0
+    color: #ed1c24
+  &.s1
+    color: orange
+  &.s2
+    color: #c7d434
+  &.s3
+    color: #8dc63d
+  &.s4
+    color: #74b87a
+  &.acceptable
+    opacity: 0
+
+.confirmation
+  opacity: 0.25
+  transition: opacity 0.25s ease-out
+  pointer-events: none
+  &.available
+    opacity: 1
+    pointer-events: auto
